<resources>
    <string name="app_name">Noworri</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="send">Send</string>
    <string name="learn_about_noworri">Learn about Noworri</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="your_name">Your name</string>
    <string name="username">Username</string>
    <string name="next">CONTINUE</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_your_account">Log in your account</string>
    <string name="payment_options">Payment options</string>
    <string name="mobile_account">    Mobile Account</string>
    <string name="bank_account">    Bank Account</string>
    <string name="visa_mastercard">Visa / Mastercard</string>
    <string name="change_passwords">Change passwords</string>
    <string name="verify">VERIFY</string>
    <string name="please_enter_your_phone_number">Please enter your Phone number</string>
    <string name="verify_your_mobile">Verify your Mobile</string>
    <string name="codeHint">•</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="verify_now">Verify Now</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="telegram">Telegram</string>
    <string name="sign_out">Sign out</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="flag_currency">Flag Currency</string>
    <string name="enter_the_amount">ENTER THE AMOUNT</string>
    <string name="receiver_s_mobile_number">RECEIVER\'S MOBILE NUMBER</string>
    <string name="transaction_fees">Transaction Fees :</string>
    <string name="network">Network</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="use_a_new_visa_card"><u>Use a New Visa Card</u></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="where_are_you_sending_money_to">Where are you sending money to ?</string>
    <string name="select_">Select the mobile wallet of your receiver</string>
    <string name="contactT">Contact</string>
    <string name="receiverCountry">You\'re sending to</string>
    <string name="how_much_are_you_sending">How much are you sending ?</string>
    <string name="the_receiver_will_get">The receiver will get</string>
    <string name="ng">NG</string>
    <string name="transaction_cost">Transaction cost</string>
    <string name="enter_coupon">Enter coupon</string>
    <string name="expire_date">EXPIRE DATE</string>
    <string name="cvv">CVV</string>
    <string name="cardholder_name">CARDHOLDER NAME</string>
    <string name="your_lastname">Your lastname</string>
    <string name="your_firstname">Your firstname</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="valid_phone_number">Valid Phone Number</string>
    <string-array name="country_arrays">
        <item>Nigeria</item>
        <item>Uganda</item>
        <item>Morocco</item>
        <item>Ghana</item>
        <item>Tanzania</item>
        <item>Senegal</item>
        <item>European Union</item>
        <item>United Kingdom</item>
    </string-array>
    <string name="dialog_message"></string>
    <string name="dialog_title">Welcome</string>
</resources>
