<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="90dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/padding_large"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/your_lastname"
                android:inputType="textCapWords" />
            <TextView
                android:id="@+id/lastnameVerificator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <EditText
                android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/your_firstname"
                android:inputType="textCapWords" />
            <TextView
                android:id="@+id/firstnameVerificator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />
            <!--  Password Label -->
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/emailVerificator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/usernameVerificator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="40dp">

            <!--  Password Label -->
            <Button
                android:id="@+id/btn_nextToNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/blueNoworri"
                android:padding="12dp"
                android:text="@string/next"
                android:textColor="@color/backnav" />

            <TextView
                android:id="@+id/link_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:onClick="terms"
                android:text="@string/terms_amp_conditions"
                android:fontFamily="@font/poppins_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:onClick="goLogin"
                android:fontFamily="@font/poppins_light"
                android:text="@string/log_in_your_account"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>